Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19952

ShellExecute does not respect MaximizeApps setting

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Shell
    • None

    Description

      The non-Ex ShellExecute does not check the MaximizeApps registry setting in ROS while it is respected on Windows.

      I suppose ShellExecuteW just calls ShellExecuteExW on Windows. In ROS it skips some steps. In addition to missing MaximizeApps, it also misses the RunDLL32 handling and CoInitialize!

      To reproduce, set DWORD MaximizeApps=1. Save this code as "test.wsf" and run it.

      <?xml version="1.0" ?><job>
      <script language="JScript"><![CDATA[
      var SHA=WScript.CreateObject("Shell.Application");
      SHA.ShellExecute("notepad.exe");
      ]]></script></job>
      

      Notepad is not started maximized. Then start Notepad from Start->Run, it will be maximized.

      Attachments

        Activity

          People

            whindsaks whindsaks
            whindsaks whindsaks
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: