[SHELL32] ShellExecuteW must call ShellExecuteExW

CORE-19952